# digestible

./: .gitignore  Makefile  README.md  all-documents.html  apidocs-help.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  searchindex.json  undoccedSummary.html
.circleci/: README.md  config.yml  deploy-ghpages.sh
digestible/: __init__.py
tests/: test_digest.py  test_trivial.py
