[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digestible"
version = "0.1"
authors = [
    {name = "Rhys Ulerich"},
]
description = "Digestible"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MPL-2.0"

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["digestible*"]

[tool.setuptools.package-data]
"*" = ["*"]
