[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digestible"
version = "0.1"
authors = [
    {name = "Rhys Ulerich"},
]
description = "Digestible"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = "MPL-2.0"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "pytest",
]
docs = [
    "pydoctor",
]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.pydoctor]
add-package = ["digestible"]
project-name = "digestible"
project-version = "0.1"
docformat = "restructuredtext"
html-output = "apidocs"

[tool.setuptools.packages.find]
where = ["."]
include = ["digestible*"]

[tool.setuptools.package-data]
"*" = ["*"]
